src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__int64__cast_int64_to_float32__impl.snap
---
source: src/expr/src/scalar/func/impls/int64.rs
expression: info
---
Info {
    output_type_nullable: SqlColumnType {
        scalar_type: Float32,
        nullable: true,
    },
    output_type_nonnullable: SqlColumnType {
        scalar_type: Float32,
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: Some(
        CastFloat32ToInt64(
            CastFloat32ToInt64,
        ),
    ),
    is_monotone: true,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
